# flux7-supervisor

./: .gitignore  README.md  pyproject.toml  sup7.yaml.example
src/sup7/: __init__.py  cli.py  config.py  evaluator.py  logger.py  mcp_server.py  models.py  rules.py  runner.py
src/sup7/providers/: __init__.py  anthropic.py  base.py  claude_code.py  ollama.py
tests/: test_config.py  test_evaluator.py  test_mcp_server.py  test_providers.py  test_rules.py
